S4-ingress-tls-config/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: workshop
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
