S4-ingress-tls-config/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: workshop
spec:
  selector:
    app: front
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
